# KGSum

./: LICENSE  README.md  config.json  config.py  pyproject.toml
docker/: .env  docker-compose.yml
docker/web/: Dockerfile  docker-compose.yml
frontend/kgsum-frontend/: next.config.ts  package-lock.json  package.json
frontend/kgsum-frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/kgsum-frontend/src/app/classify/: action.ts  form.tsx
frontend/kgsum-frontend/src/app/explore/: page.tsx
frontend/kgsum-frontend/src/app/privacy/: page.tsx
frontend/kgsum-frontend/src/app/statistics/: page.tsx
frontend/kgsum-frontend/src/components/: banner-menu.tsx  banner.tsx  footer.tsx  logo.tsx  navbar.tsx  theme-toggle.tsx
src/: dataset_preparation.py  dataset_preparation_remote.py  generate_profile.py  pipeline_build.py  pipeline_gemma.py  predict_category.py  preprocessing.py
