[project]
name = "kgsum"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26.4,<2.0.0",
    "protobuf<3.21.0",
    "aiohttp>=3.13.3",
    "de-dep-news-trf",
    "en-core-web-trf",
    "es-dep-news-trf",
    "flasgger>=0.9.7.1",
    "flask[async]>=3.1.3",
    "fr-dep-news-trf",
    "it-core-news-lg",
    "ja-core-news-trf",
    "joblib>=1.5.3",
    "nl-core-news-lg",
    "ollama>=0.6.1",
    "pandas>=3.0.1",
    "psutil>=7.2.2",
    "pt-core-news-lg",
    "pyjwt>=2.11.0",
    "ru-core-news-lg",
    "scikit-learn>=1.8.0",
    "spacy>=3.7.2,<3.8.0",
    "sparqlwrapper>=2.0.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "werkzeug>=3.1.5",
    "xx-sent-ud-sm",
    "zh-core-web-trf",
    "langdetect>=1.0.9",
]

[tool.uv.sources]
zh-core-web-trf = { url = "https://github.com/explosion/spacy-models/releases/download/zh_core_web_trf-3.7.0/zh_core_web_trf-3.7.0-py3-none-any.whl" }
nl-core-news-lg = { url = "https://github.com/explosion/spacy-models/releases/download/nl_core_news_lg-3.7.0/nl_core_news_lg-3.7.0-py3-none-any.whl" }
en-core-web-trf = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.0/en_core_web_trf-3.7.0-py3-none-any.whl" }
fr-dep-news-trf = { url = "https://github.com/explosion/spacy-models/releases/download/fr_dep_news_trf-3.7.0/fr_dep_news_trf-3.7.0-py3-none-any.whl" }
de-dep-news-trf = { url = "https://github.com/explosion/spacy-models/releases/download/de_dep_news_trf-3.7.0/de_dep_news_trf-3.7.0-py3-none-any.whl" }
it-core-news-lg = { url = "https://github.com/explosion/spacy-models/releases/download/it_core_news_lg-3.7.0/it_core_news_lg-3.7.0-py3-none-any.whl" }
ja-core-news-trf = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_trf-3.7.0/ja_core_news_trf-3.7.0-py3-none-any.whl" }
xx-sent-ud-sm = { url = "https://github.com/explosion/spacy-models/releases/download/xx_sent_ud_sm-3.7.0/xx_sent_ud_sm-3.7.0-py3-none-any.whl" }
pt-core-news-lg = { url = "https://github.com/explosion/spacy-models/releases/download/pt_core_news_lg-3.7.0/pt_core_news_lg-3.7.0-py3-none-any.whl" }
ru-core-news-lg = { url = "https://github.com/explosion/spacy-models/releases/download/ru_core_news_lg-3.7.0/ru_core_news_lg-3.7.0-py3-none-any.whl" }
es-dep-news-trf = { url = "https://github.com/explosion/spacy-models/releases/download/es_dep_news_trf-3.7.0/es_dep_news_trf-3.7.0-py3-none-any.whl" }
